﻿PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 20??, PHP 7.0.0

- CLI server:
  . Refactor MIME type handling to use a hash table instead of linear search.
    (Adam)
  . Update the MIME type list from the one shipped by Apache HTTPD. (Adam)

- Core:
  . Fixed bug #69427 (Segfault on magic method __call of private method in 
    superclass). (Laruence)
  . Improved __call() and __callStatic() magic method handling. Now they are
    called in a stackless way using ZEND_CALL_TRAMPOLINE opcode, without
    additional stack frame. (Laruence, Dmitry)
  . Optimized strings concatenation. (Dmitry, Laruence)
  . Fixed weird operators behavior. Division by zero now emits warning and 
    returns +/-INF, modulo by zero and intdid() throws an exception, shifts
    by negative offset throw exceptions. Compile-time evaluation of division
    by zero is disabled. (Dmitry, Andrea, Nikita)
  . Fixed bug #69371 (Hash table collision leads to inaccessible array keys).
    (Laruence)
  . Fixed bug #68933 (Invalid read of size 8 in zend_std_read_property).
    (Laruence, arjen at react dot com)
  . Fixed bug #68868 (Segfault in clean_non_persistent_constants() in SugarCRM
    6.5.20). (Laruence)
  . Fixed bug #68104 (Segfault while pre-evaluating a disabled function).
    (Laruence)
  . Fixed bug #68252 (segfault in Zend/zend_hash.c in function
    _zend_hash_del_el). (Laruence)
  . Added PHP_INT_MIN constant. (Andrea)
  . Added Closure::call() method. (Andrea)
  . Implemented FR #38409 (parse_ini_file() looses the type of booleans). (Tjerk)
  . Fixed bug #67959 (Segfault when calling phpversion('spl')). (Florian)
  . Implemented the RFC `Catchable "Call to a member function bar() on a
    non-object"`. (Timm)
  . Added options parameter for unserialize allowing to specify acceptable
    classes (https://wiki.php.net/rfc/secure_unserialize). (Stas)